# halting-library

./: .gitignore  .pylintrc  .pypirc  LICENSE.txt  README.md  pyproject.toml  requirements.txt  run.sh
src/figures/: nooo.py  numbers.py
src/halting/: __init__.py  base.py  config.py  settings.py  tests.py  utils.py
src/halting.egg-info/: PKG-INFO  SOURCES.txt
src/halting/_tests/: __init__.py  base.py  settings.py  utils.py
src/halting/calculus/: calculus.py
src/halting/core/: algebra.py  algorithms.py  area.py  numbers.py  tests.py  volume.py
src/halting/core/_tests/: __init__.py  algebra.py  algorithms.py  area.py  numbers.py  volume.py
src/halting/cryptography/: cryptography.py
src/halting/figures/: numbers.py  tests.py
src/halting/figures/_tests/: __init__.py  numbers.py
src/halting/figures/tests/: numbers.py
src/halting/formulas/: __init__.py  algebra.py  area.py  formulas.py  tests.py  volume.py
src/halting/formulas/_tests/: __init__.py  algebra.py  area.py  volume.py
src/halting/formulas/tests/: formulas.py
src/halting/length/: length.py  tests.py
src/halting/mass/: mass.py  tests.py
src/halting/math/: cryptography.py  logic.py  probability.py  sets.py  statistics.py  tests.py  trigonometry.py
src/halting/physics/: conversion.py  tests.py
src/halting/probability/: probability.py
src/halting/sets/: operations.py  sets.py
src/halting/statistics/: statistics.py
src/halting/time/: tests.py  time.py
src/halting/topology/: topology.py
src/halting/trigonometry/: trigonometry.py
src/mass/: mass.py
(+7 files in other folders)
