[project]

name = "halting"
description = "Physics Library to manage physical units."
version = "1.0.0"
authors = [
    {name = "João Vitor Witt", email = "joaovitorwitt2004@gmail.com"}
]
requires-python = ">=3.0"
license = { file = "LICENSE.txt" }
readme = "README.md"

keywords = [
    "python",
    "physics",
    "lib",
    "development"
]

[project.urls]
Homepage = "https://github.com/joaovitorwitt/halting-library"
Issues = "https://github.com/joaovitorwitt/halting-library/issues"
Pulls = "https://github.com/joaovitorwitt/halting-library/pulls"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"